<resources>
    <string name="app_name">测试demo</string>

    <!-- 图片选择器 -->
    <string name="image_selecor_title">图片选择器</string>

    <!-- SQLite -->
    <string name="create_database">创建数据库</string>
    <string name="update_database">更新数据库</string>
    <string name="insert">插入数据</string>
    <string name="update">更新数据</string>
    <string name="query">查询数据</string>
    <string name="delete">删除数据</string>
    <string name="sql_title">SQLite测试</string>

    <!-- mainactivity -->
    <string name="sqlite">SQLite</string>
    <string name="imageselector">图片选择器</string>
    <string name="main">主界面</string>

    <!-- 打电话 -->
    <string name="telephone">打电话</string>
    <string name="phonenumber">请输入拨打的电话</string>
    <string name="call">拨打电话</string>
    <string name="numberisnull">号码为空</string>
    <string name="tele_title">打电话</string>

    <!-- 发送短信 -->
    <string name="sendsms">发送短信</string>
    <string name="phone">号码</string>
    <string name="content">内容</string>
    <string name="send">发送</string>
    <string name="send_success">发送成功</string>
    <string name="number_is_wrong">号码输入有误</string>
    <string name="content_is_null"> 消息内容为空</string>

    <!-- 文件存储 -->
    <string name="filestore">文件存储</string>
    <string name="username">用户名</string>
    <string name="pwd">密码</string>
    <string name="login">登录</string>
    <string name="remenberpwd">记住密码</string>

    <string name="sure">确定</string>
    <string name="pleaseinput">请输入</string>
    <string name="istrue">验证码正确</string>
    <string name="iserror">验证码错误</string>
    <string name="verifycode">验证码</string>

    <string name="selectbank">银行卡选择</string>
    <string name="bankname">要插入的银行卡名</string>
    <string name="banknumber">银行卡尾号</string>

    <string name="china_bank">中国银行</string>
    <string name="nong_ye_bank">农业银行</string>
    <string name="jian_she_bank">建设银行</string>
    <string name="zhao_shang_bank">招商银行</string>
    <string name="zhe_shang_bank">浙商银行</string>
    <string name="gong_shang_bank">工商银行</string>
    <string name="ren_min_bank">人民银行</string>

    <string name="register">注册</string>
    <string name="register_success">注册成功</string>
    <string name="user_error">用户名不存在</string>
    <string name="pwd_error">密码错误</string>
    <string name="user_pwd_empty">请输入用户名、密码</string>
    <string name="sure_pwd">确认密码</string>
    <string name="pwdnotsame">两次输入的密码不相同</string>
    <string name="number_english">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <string name="diary">日记</string>

    <string name="to_next_activity">跳转到第二个Activity</string>
    <string name="eventbus_first">EventBus的使用One</string>
    <string name="eventbus_to_first">通过EventBus传值给First</string>
    <string name="eventbus_second">EventBus的使用Second</string>
    <string name="eventbus">eventbus</string>

    <string name="rxjava_helloworld">RxJavaHelloWorld</string>
    <string name="rxjava_operators">RxJavaOperators</string>
    <string name="hello_world">Hello World</string>
    <string name="hello_world2">Hello World2</string>
    <string name="hello_world3">Hello World3</string>
    <string name="rxjava">RxJava</string>
    <string name="rxjava_op">Operators</string>
    <string name="rxjava_op2">Operators2</string>
    <string name="rxjava_op3">Operators3</string>
    <string name="rxjava_op4">Operators4</string>
    <string name="rxjava_flatmap">flatmap</string>
    <string name="rxjava_flatmap2">flatmap2</string>
    <string name="rxjava_flatmap3">flatmap3</string>
    <string name="rxjava_flatmap4">flatmap4</string>
    <string name="rxjava_flatmap5">flatmap5</string>
    <string name="rxjava_flatmap6">flatmap6</string>

    <!-- retrofit -->
    <string name="retrofit">retrofit</string>
    <string name="retrofit_query">retrofit_query</string>
    <string name="retrofit_query_map">retrofit_query_map</string>
    <string name="retrofit_path">retrofit_path</string>
    <string name="retrofit_field_map">retrofit_field_map</string>

    <string name="convenientbanner">ConvenientBanner</string>

    <string name="glide">Glide</string>

    <string name="download">DownLoad</string>

    <string name="x_recycler_view">XRecyclerView</string>

    <string name="custom_view">CustomView</string>

    <string name="text_back">返回</string>
</resources>
