<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_retrofit_query"
        style="@style/main_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retrofit_query" />


    <Button
        android:id="@+id/btn_retrofit_query_map"
        style="@style/main_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retrofit_query_map" />
    <Button
        android:id="@+id/btn_retrofit_path"
        style="@style/main_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retrofit_path" />
    <Button
        android:id="@+id/btn_retrofit_field_map"
        style="@style/main_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retrofit_field_map" />
    <TextView
        android:id="@+id/tv_retrofit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>