<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.zx.myapplication.biz.rxjava.RxJavaHelloWorld.RxJavaHelloWorldActivity">

    <include layout="@layout/title_bar"/>

    <Button
        android:id="@+id/btn_rxjavahw_hw"
        style="@style/main_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"/>

    <Button
        android:id="@+id/btn_rxjavahw_hw2"
        style="@style/main_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world2"/>

    <Button
        android:id="@+id/btn_rxjavahw_hw3"
        style="@style/main_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world3"/>

</LinearLayout>
